Added AUDO chunk support

--- a/GM_Win_Extractor/GM_Win_Extractor.vcxproj
+++ b/GM_Win_Extractor/GM_Win_Extractor.vcxproj
@@ -146,6 +146,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Archive.cpp" />
+    <ClCompile Include="Dumper.cpp" />
     <ClCompile Include="GM_Win_Extractor.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
