--- a/GM_Win_Extractor/GM_Win_Extractor.vcxproj.filters
+++ b/GM_Win_Extractor/GM_Win_Extractor.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Archive.cpp">
       <Filter>Header Files</Filter>
     </ClCompile>
+    <ClCompile Include="Dumper.cpp">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
